--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -28,7 +28,8 @@
    "source": [
     "from scripts.data_cleaning import treat_outliers_with_mean, clean_data_1, clean_data_2\n",
     "from scripts.data_extraction import read_csv\n",
-    "from scripts.data_check import check_missing_value\n"
+    "from scripts.data_check import check_missing_value\n",
+    "from scripts.variablity_calculation import calculate_variability\n"
    ]
   },
   {
@@ -384,6 +385,34 @@
    ],
    "source": [
     "print(data[['TotalPremium', 'TotalClaims']].describe())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TotalPremium Variability:\n",
+      "  Variance: 53030.96\n",
+      "  Coefficient of Variation: 371.99%\n",
+      "  Range: 66065.18\n",
+      "  IQR: 21.93\n",
+      "\n",
+      "TotalClaims Variability:\n",
+      "  Variance: 5683812.15\n",
+      "  Coefficient of Variation: 3675.66%\n",
+      "  Range: 405094.52\n",
+      "  IQR: 0.00\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "calculate_variability(data[['TotalPremium', 'TotalClaims']].describe())"
    ]
   },
   {
