--- a/notebooks/hypothesis_testing.ipynb
+++ b/notebooks/hypothesis_testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,12 +11,13 @@
     "from scipy.stats import ttest_ind, chi2_contingency\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "from scipy.stats import ttest_ind"
+    "from scipy.stats import ttest_ind\n",
+    "import scipy.stats as stats"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,14 +36,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\HP\\AppData\\Local\\Temp\\ipykernel_8368\\724081391.py:2: DtypeWarning: Columns (32,37) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\HP\\AppData\\Local\\Temp\\ipykernel_8952\\724081391.py:2: DtypeWarning: Columns (32,37) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  data = pd.read_csv(\"../data/MachineLearningRating_v3.csv\")\n"
      ]
     },
@@ -110,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +154,7 @@
       "6655         1\n",
       "Name: count, Length: 888, dtype: int64\n",
       "Gender\n",
-      "Not specified    950526\n",
+      "Not specified    940990\n",
       "Male              42817\n",
       "Female             6755\n",
       "Name: count, dtype: int64\n"
@@ -168,18 +169,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Data Segmentation\n",
-    "\n",
-    "import pandas as pd\n",
-    "import scipy.stats as stats\n",
-    "import numpy as np\n",
-    "\n",
-    "# Load your dataset\n",
-    "#data = pd.read_csv('your_data_file.csv')  # Update with your file path\n",
     "\n",
     "# Filter out relevant columns (You can also do this in the previous pre-processing step)\n",
     "data['TotalPremium'] = pd.to_numeric(data['TotalPremium'], errors='coerce')\n",
@@ -199,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +241,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\HP\\AppData\\Local\\Temp\\ipykernel_8368\\3801818424.py:7: SmallSampleWarning: One or more sample arguments is too small; all returned values will be NaN. See documentation for sample size requirements.\n",
+      "C:\\Users\\HP\\AppData\\Local\\Temp\\ipykernel_8952\\3801818424.py:7: SmallSampleWarning: One or more sample arguments is too small; all returned values will be NaN. See documentation for sample size requirements.\n",
       "  t_stat, p_value = stats.ttest_ind(zip_a['TotalClaims'], zip_b['TotalClaims'], equal_var=False)\n"
      ]
     }
@@ -267,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +277,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\HP\\AppData\\Local\\Temp\\ipykernel_8368\\1157490913.py:6: SmallSampleWarning: One or more sample arguments is too small; all returned values will be NaN. See documentation for sample size requirements.\n",
+      "C:\\Users\\HP\\AppData\\Local\\Temp\\ipykernel_8952\\1157490913.py:6: SmallSampleWarning: One or more sample arguments is too small; all returned values will be NaN. See documentation for sample size requirements.\n",
       "  t_stat, p_value = stats.ttest_ind(zip_a['Margin'], zip_b['Margin'], equal_var=False)\n"
      ]
     }
@@ -302,7 +296,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(zip_a['Margin'].count())  # Number of valid entries\n",
+    "print(zip_b['Margin'].count())  # Number of valid entries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -333,6 +337,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\HP\\AppData\\Local\\Temp\\ipykernel_11772\\2108188699.py:2: DtypeWarning: Columns (32,37) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  data = pd.read_csv(\"../data/MachineLearningRating_v3.csv\")\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Load data\n",
+    "data = pd.read_csv(\"../data/MachineLearningRating_v3.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -355,6 +385,80 @@
     "y = data['TotalPremium']  # Example target variable\n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Model Building\n",
+    "\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from xgboost import XGBRegressor\n",
+    "\n",
+    "# Linear Regression\n",
+    "lr = LinearRegression()\n",
+    "lr.fit(X_train, y_train)\n",
+    "lr_pred = lr.predict(X_test)\n",
+    "\n",
+    "# Random Forest\n",
+    "rf = RandomForestRegressor(random_state=42)\n",
+    "rf.fit(X_train, y_train)\n",
+    "rf_pred = rf.predict(X_test)\n",
+    "\n",
+    "# XGBoost\n",
+    "xgb = XGBRegressor(random_state=42)\n",
+    "xgb.fit(X_train, y_train)\n",
+    "xgb_pred = xgb.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Model Evaluation\n",
+    "\n",
+    "from sklearn.metrics import mean_squared_error, mean_absolute_error, r2_score\n",
+    "\n",
+    "# Function to evaluate models\n",
+    "def evaluate_model(y_true, y_pred):\n",
+    "    mse = mean_squared_error(y_true, y_pred)\n",
+    "    mae = mean_absolute_error(y_true, y_pred)\n",
+    "    r2 = r2_score(y_true, y_pred)\n",
+    "    return mse, mae, r2\n",
+    "\n",
+    "# Evaluate each model\n",
+    "lr_metrics = evaluate_model(y_test, lr_pred)\n",
+    "rf_metrics = evaluate_model(y_test, rf_pred)\n",
+    "xgb_metrics = evaluate_model(y_test, xgb_pred)\n",
+    "\n",
+    "print(\"Linear Regression:\", lr_metrics)\n",
+    "print(\"Random Forest:\", rf_metrics)\n",
+    "print(\"XGBoost:\", xgb_metrics)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#  Feature Importance Analysis and Interpretation\n",
+    "\n",
+    "# Feature Importance Analysis\n",
+    "importances = rf.feature_importances_\n",
+    "features = X.columns\n",
+    "indices = np.argsort(importances)[::-1]\n",
+    "\n",
+    "# Print feature ranking\n",
+    "print(\"Feature ranking:\")\n",
+    "for f in range(X.shape[1]):\n",
+    "    print(f\"{f + 1}. feature {features[indices[f]]} ({importances[indices[f]]})\")"
    ]
   }
  ],
